--- a/ScarpaMondo/Views/Home/Index.cshtml
+++ b/ScarpaMondo/Views/Home/Index.cshtml
@@ -1,8 +1,22 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<ScarpaMondo.Models.Articolo>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h2>Articoli in Vetrina</h2>
+
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-4 mb-4">
+            <div class="card" style="width: 18rem;">
+                @if (!string.IsNullOrEmpty(item.ImmagineCopertinaUrl))
+                {
+                    <img src="@item.ImmagineCopertinaUrl" class="card-img-top" alt="Immagine di @item.Nome">
+                }
+                <div class="card-body">
+                    <h5 class="card-title">@item.Nome</h5>
+                    <p class="card-text">Prezzo: @String.Format("{0:C}", item.Prezzo)</p>
+                    <a href="@Url.Action("Details", "Articolo", new { id = item.ArticoloId })" class="btn btn-primary">Vedi Dettagli</a>
+                </div>
+            </div>
+        </div>
+    }
 </div>
